@@ -30,7 +30,7 @@
     "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@types/fs-extra": "^8.0.1",
-    "@types/jest": "^24.0.22",
+    "@types/jest": "^24.0.23",
     "@types/lodash": "^4.14.146",
     "@types/node": "^12.12.7",
     "@types/node-emoji": "^1.8.1",
@@ -48,6 +48,7 @@
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15",
     "node-emoji": "^1.10.0",
+    "simple-git": "^1.126.0",
     "sprintf-js": "^1.1.2",
     "yurnalist": "^1.1.1"
   }
