@@ -1,0 +1,3 @@
+declare module "simple-git" {
+  export function raw(...args: any[]): Promise<any>;
+}
