@@ -1,41 +1,45 @@
-import path from 'path';
-import fp from 'lodash/fp';
-import fs from 'fs-extra';
-import Hook from './hook';
+import path from "path";
+import fs from "fs-extra";
+
+import git from "simple-git/promise";
+
+import fp from "lodash/fp";
+import Hook from "./hook";
 
 export const hookTypes = [
-  'applypatch-msg',
-  'post-commit',
-  'pre-auto-gc',
-  'pre-rebase',
-  'commit-msg',
-  'post-merge',
-  'pre-commit',
-  'pre-receive',
-  'post-applypatch',
-  'post-receive',
-  'prepare-commit-msg',
-  'update',
-  'post-checkout',
-  'pre-applypatch',
-  'pre-push',
+  "applypatch-msg",
+  "post-commit",
+  "pre-auto-gc",
+  "pre-rebase",
+  "commit-msg",
+  "post-merge",
+  "pre-commit",
+  "pre-receive",
+  "post-applypatch",
+  "post-receive",
+  "prepare-commit-msg",
+  "update",
+  "post-checkout",
+  "pre-applypatch",
+  "pre-push"
 ];
 
-export type HookPhase = 'applypatch-msg'|
-  'post-commit'|
-  'pre-auto-gc'|
-  'pre-rebase'|
-  'commit-msg'|
-  'post-merge'|
-  'pre-commit'|
-  'pre-receive'|
-  'post-applypatch'|
-  'post-receive'|
-  'prepare-commit-msg'|
-  'update'|
-  'post-checkout'|
-  'pre-applypatch'|
-  'pre-push';
+export type HookPhase =
+  | "applypatch-msg"
+  | "post-commit"
+  | "pre-auto-gc"
+  | "pre-rebase"
+  | "commit-msg"
+  | "post-merge"
+  | "pre-commit"
+  | "pre-receive"
+  | "post-applypatch"
+  | "post-receive"
+  | "prepare-commit-msg"
+  | "update"
+  | "post-checkout"
+  | "pre-applypatch"
+  | "pre-push";
 
 const getHooks = async (dir: string) => {
   let files = fp.flatten(
@@ -46,9 +50,9 @@ const getHooks = async (dir: string) => {
           fs
             .readdir(dir)
             .then(files => files.map(f => path.join(dir, f)))
-            .catch(() => []),
-        ),
-    ).catch(() => []),
+            .catch(() => [])
+        )
+    ).catch(() => [])
   );
 
   return fp.compact(
@@ -58,32 +62,43 @@ const getHooks = async (dir: string) => {
           fs
             .access(f as string, fs.constants.X_OK)
             .then(() => f as string)
-            .catch(() => ''),
-      ),
-    ).catch(() => []),
+            .catch(() => "")
+      )
+    ).catch(() => [])
   );
 };
 
 export class Vaudeville {
-
   constructor() {}
 
-  get vaudeville_dirs() {
-    return [
-      path.join(process.env['HOME'] as string, 'git/vaudeville'),
-      './.git/hooks/vaudeville',
-    ];
+  get vaudeville_dirs(): Promise<string[]> {
+    return (async () => {
+      let rawDirs = await git()
+        .raw(["config", "vaudeville.dirs"])
+        .catch(() => null);
+
+      if (!rawDirs) rawDirs = "~/git/vaudeville,./.git/hooks/vaudeville";
+
+      return rawDirs
+        .split(",")
+        .map(d =>
+          d.replace(/^~/, process.env["HOME"] || "~").replace("\n", "")
+        );
+    })();
   }
 
-  get hooks() {
-    return Promise.all(this.vaudeville_dirs.map(getHooks)).catch(() => [])
-        .then( fp.flatten ).then( h => h.map( i => new Hook(i) ) )
-        .then( fp.sortBy('name' ) )
-        .then( fp.groupBy( 'type' ) ) as Promise<{
-            [t: string]: Hook[]
-        }>;
+  get hooks(): Promise<{ [t: string]: Hook[] }> {
+    return new Promise(async (resolve, reject) => {
+      this.vaudeville_dirs
+        .then(dirs => Promise.all(dirs.map(d => getHooks(d).catch(() => []))))
+        .then(fp.flatten)
+        .then(h => h.map(i => new Hook(i)))
+        .then(fp.sortBy("name"))
+        .then(fp.groupBy("type"))
+        .then((x: any) => resolve(x))
+        .catch(() => resolve({}));
+    });
   }
-
 }
 
 export default Vaudeville;
